test/fail/26-match_deeper_wrong_num_params_toofew.perk
import "stdio.h"

type List =
    | Empty
    | Cons (int, List)

fun main(): void {
    let l : List = Cons(10, Cons(20, Empty));

    match (l) {
        Cons(_) {
            printf("Banana");
        },
        _ {
            printf("Not Banana");
        }
    }
}